--- a/contracts/orders/Cargo.toml
+++ b/contracts/orders/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "trade_tokens"
+name = "orders"
 version = "0.1.0"
 authors = ["Phalanx"]
 edition = "2021"
 
 [lib]
-name = "trade_tokens"
+name = "orders"
 path = "lib.rs"
 crate-type = ["cdylib"]
 
@@ -20,7 +20,7 @@ ink_prelude = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", d
 scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }
 
-brush = { tag = "v1.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable"]  }
+brush = { tag = "v1.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable"] }
 phalanx = { path = "../..", default-features = false }
 
 
